Hide Theme-button on mobile, since $(document).ready does not work there… Fix positioning of .mainContent on mobile

--- a/client/static/scss/modules/_header.scss
+++ b/client/static/scss/modules/_header.scss
@@ -29,9 +29,6 @@ header {
     margin: 0;
     padding: 10px;
     border-radius: 0 !important;
-    &:not(.edited) + .mainContent {
-      margin-top: 130px !important;
-    }
   }
 
   h1 {
